#                             #
###############################

Release notes for siesta 4.1 version

--- Default changes:
    TranSiesta/TBtrans eta values are now default to 1meV
    TranSiesta equilibrium contours now default to using the "right" scheme
    Maximum l for KB projectors is now automatically set to the highest l
       in the PS file. This may result in slight changes.

--- Siesta is now developed on the GitLab platform: www.gitlab.com/siesta-project/siesta
    Siesta's orphan packages are developed here: www.gitlab.com/siesta-project

--- Removed a small memory leak (from siesta_init)

--- Enabled parallel-over-k for NC/SOC calculations

--- Fixed bug for writing eigenvalues when NumberOfOrbitals was used (together with NC/SOC)

--- Fixed printing Voronoi and Hirshfeld charges if user requsted LDOS calculations

--- Fixed cell transpose when using socket calculations (only important for skewed cells)

--- Added citation information to output (end of run)

--- Allowed Mesh.Sizes as list input so users can specify their own Mesh size

--- Fixed *.nc writes, fixes lp:1810279.

--- Fixes polarization issue with Bessel orbitals

--- Removed BSC_CELLXC since the BSC distribution could result in better
    performance. It is now part of the SiestaXC code.

--- Lots of updates for documentation

--- Precision problem in the vibra utility is fixed, lp:1816719

--- Added wavefunction tools for spin-orbit calculations.
    Now denchar and stm utilities can process spin-orbit output.

--- Removed *ALL* OMP collapse statements, Intel 2019 is buggy.

--- TranSiesta/TBtrans changes:

-- Much more efficient dq implementation for fixing charge fluctuations

-- Fixed TBtrans calculations with spin-flags (i.e. TB-only)

-- Allow E-field for 1-electrode calculations, this allows 1-electrode
   capacitor setups

-- Fixed bug in voltage potential which was severe for capacitor like setups.
   It also changes regular TS runs.
