@@ -102,7 +102,13 @@
 !
             ps = stress + kin_stress
             write(6,'(/,a,6f12.2)')
-     .           'Stress-tensor-Voigt (kbar):',
+     .           'Stress-tensor-Voigt (kbar) [x,y,z,yz,xz,xy]:',
+     .           (ps(jx,jx)/kbar,jx=1,3),
+     $            ps(2,3)/kbar,
+     $            ps(1,3)/kbar,
+     $            ps(1,2)/kbar
+            write(6,'(a,6f12.2)')
+     .           'Stress-tensor-Voigt (kbar) [x,y,z,xy,yz,xz] {DEL}:',
      .           (ps(jx,jx)/kbar,jx=1,3),
      $            ps(1,2)/kbar,
      $            ps(2,3)/kbar,
@@ -114,7 +120,15 @@
             if (RemoveIntraMolecularPressure) then
                ps = mstress + kin_stress
                write(6,'(/,a,6f12.2)')
-     .           'Inter-Molecular-Stress-Voigt (kbar):',
+     .   'Inter-Molecular-Stress-Voigt (kbar) [x,y,z,yz,xz,xy]:',
+     .           ' (kbar):',
+     .           (ps(jx,jx)/kbar,jx=1,3),
+     $            ps(2,3)/kbar,
+     $            ps(1,3)/kbar,
+     $            ps(1,2)/kbar
+               write(6,'(2a,6f12.2)')
+     .   'Inter-Molecular-Stress-Voigt (kbar) [x,y,z,xy,yz,xz] {DEL}:',
+     .           ' (kbar):',
      .           (ps(jx,jx)/kbar,jx=1,3),
      $            ps(1,2)/kbar,
      $            ps(2,3)/kbar,
